<resources>
    <string name="app_name">ML Kit Codelab</string>
    <string name="select_image_for_text_recognition">Select image for text recognition</string>
    <string name="find_text_button">Find text</string>
    <string name="find_face_contour_button">Find face contour</string>
    <string name="find_text_cloud_button">Find text (cloud)</string>
    <string name="find_objects_button">Find objects</string>

    <string name="gs_switch">Grayscale</string>
    <string name="eq_switch">Equalise</string>
    <string name="blur_switch">Blur/Smooth</string>
    <string name="rot_switch">Rotate</string>
    <string name="cv_switch">OpenCV pre-processing</string>
    <string name="nnapi_switch">Use NNAPI</string>
    <string name="gpu_switch">Use GPU</string>
    <string name="xnnpack_switch">Use XNNPack</string>
    <string name="benchmark">Benchmark</string>
</resources>
