<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/select_image_for_text_recognition"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <ImageView
        android:id="@+id/image_view_processed"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:contentDescription="@string/select_image_for_text_recognition"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/image_view"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <com.google.codelab.mlkit.GraphicOverlay
        android:id="@+id/graphic_overlay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        app:layout_constraintBottom_toBottomOf="@id/image_view"
        app:layout_constraintLeft_toLeftOf="@id/image_view"
        app:layout_constraintRight_toRightOf="@id/image_view"
        app:layout_constraintTop_toTopOf="@id/image_view" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/button_train"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_face"
        android:layout_width="206dp"
        android:layout_height="50dp"
        android:autoText="false"
        android:text="Find Face"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_train"
        android:layout_width="206dp"
        android:layout_height="50dp"
        android:text="Train/Register face(s)"
        app:layout_constraintBottom_toBottomOf="@+id/button_face"
        app:layout_constraintEnd_toStartOf="@+id/button_face"
        app:layout_constraintStart_toStartOf="@+id/image_view"
        app:layout_constraintTop_toTopOf="@+id/button_face" />

    <Switch
        android:id="@+id/gs_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:checked="true"
        android:text="@string/gs_switch"
        app:layout_constraintBottom_toTopOf="@+id/eq_switch"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/eq_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:checked="true"
        android:text="@string/eq_switch"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/image_view" />

    <Switch
        android:id="@+id/rot_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:checked="true"
        android:text="@string/rot_switch"
        app:layout_constraintBottom_toTopOf="@+id/gs_switch"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/cv_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:checked="true"
        android:text="@string/cv_switch"
        app:layout_constraintBottom_toTopOf="@+id/rot_switch"
        app:layout_constraintStart_toStartOf="@+id/image_view" />

    <Switch
        android:id="@+id/nnapi_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:checked="false"
        android:enabled="false"
        android:text="@string/nnapi_switch"
        app:layout_constraintBottom_toTopOf="@+id/cv_switch"
        app:layout_constraintLeft_toRightOf="@+id/cv_switch"
        app:layout_constraintStart_toStartOf="@+id/image_view" />

    <Switch
        android:id="@+id/gpu_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:checked="false"
        android:enabled="false"
        android:text="@string/gpu_switch"
        app:layout_constraintBottom_toTopOf="@+id/cv_switch"
        app:layout_constraintLeft_toRightOf="@+id/cv_switch"
        app:layout_constraintStart_toEndOf="@+id/nnapi_switch" />

    <Switch
        android:id="@+id/xnnpack_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:checked="true"
        android:text="@string/xnnpack_switch"
        app:layout_constraintBottom_toTopOf="@+id/cv_switch"
        app:layout_constraintLeft_toRightOf="@+id/cv_switch"
        app:layout_constraintStart_toEndOf="@+id/gpu_switch" />

    <EditText
        android:id="@+id/nthreads_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="441dp" />

</androidx.constraintlayout.widget.ConstraintLayout>